# ebike

./: .gitignore  .gitmodules  ebike.code-workspace
physical/bike/: main.bcad
physical/can/switch/: layout.diy
physical/can/trans/: layout.diy
physical/wheel_speed_sensor/: HAL.FCStd  casing.FCStd  sensor.FCStd
software/: Cargo.toml
software/ccu/: Cargo.toml  chip_list
software/ccu/.cargo/: config.toml
software/fcu/: .gitignore  Cargo.toml  build.rs
software/fcu/src/: lib.rs  main.rs  peripherals.rs  wrapper.rs
software/mcu/: Cargo.toml  build.rs  memory.x
software/mcu/.cargo/: config.toml
software/mcu/src/: lib.rs  main.rs  perphierals.rs  wrappers.rs
software/shared/: Cargo.toml  logs.txt
software/shared/examples/: local.py  local.rs  local_runner.rs
software/shared/examples/local/: Cargo.toml  logs.txt  simulation.csv  testbed_state_rapier_testbed2d.autosave.json  testbed_state_rapier_testbed3d.autosave.json
software/shared/examples/local/src/: lib.rs  main.rs  ui.rs  wrapper.rs
software/shared/examples/local/src/simulation/: car.rs  ecu.rs  mod.rs
software/shared/examples/local/src/wrappers/: core.rs  fcu.rs  mcu.rs  mod.rs
software/shared/src/: lib.rs  main.rs
software/shared/src/can/: ids.rs  messages.rs
software/shared/src/config/: config.rs  mod.rs
software/shared/src/consts/: mod.rs
software/shared/src/controllers/: fcu.rs  mcu.rs  mod.rs  shared.rs
software/shared/src/messages/: ids.rs  messages.rs  mod.rs
software/shared/src/messages/messages/: common.rs  control_req.rs  ecu.rs  mcu.rs  mod.rs  tire_status.rs  update.rs
software/shared/src/operations/: config_updater.rs  mod.rs  throttle_map.rs  traction_control.rs
software/shared/src/subsystems/: mod.rs  shared.rs
software/shared/src/subsystems/mcu/: engine.rs  mod.rs
software/shared/src/utils/: mod.rs  parts.rs  percentage.rs  speed.rs  time.rs
