[workspace]
resolver = "3"

default-members = []
members = ["fcu",  "ccu", "shared"]

[workspace.package]
version = "0.1.0"
categories = ["embedded"]
edition = "2024"
rust-version = "1.88"
authors = ["Michael Honaker <mchonaker@gmail.com>"]

[workspace.dependencies]
# Core workspace dependencies
fcu = { path = "fcu" }
ccu = { path = "ccu" }
shared = { path = "shared" }

# Shared dependencies for all projects
anyhow = "1.0.98"
embedded-can = "0.4.1"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"