[package]
name = "shared"
version = "0.1.0"
categories = ["embedded"]
edition = "2024"
rust-version = "1.88"
authors = ["Michael Honaker <mchonaker@gmail.com>"]

[dependencies]
embedded-can = "0.4.1"
pid-lite = { version = "1.2.0", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3.31"
base64 = {version = "0.22.1"}
crossbeam = "0.8.4"