[package]
name = "shared"
version = "0.1.0"
categories = ["embedded"]
edition = "2024"
rust-version = "1.88"
authors = ["Michael Honaker <mchonaker@gmail.com>"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-can = "0.4.1"
format_no_std = "1.2.0"
micromath = "2.1.0"
pid-lite = { version = "1.2.0", default-features = false }

[features]
std = []
defmt = ["dep:defmt"]